--- a/src/global.css
+++ b/src/global.css
@@ -7,3 +7,13 @@
     font-family: 'Rubik', sans-serif;
 }
 
+html,
+body {
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+
+}
+
+html{
+  scroll-behavior: smooth;
+}
